@@ -1,6 +1,7 @@
 - Fix always show search for nested list on multi-level through associations
 - Support changing step, min and max options with column options or search_ui options for decimal and integer search_ui
 - Support null and not null comparators in date and datetime search_ui
+- Support defining options_for_association_conditions and association_klass_scoped helpers prefixed with model name. Useful when clear_helpers is not called in ApplicationController.
 
 = 3.7.4
 - Support loading both jquery and jquery-ui externally
